--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "src/**/*.d.ts",
     "src/**/*.test.ts",
     "src/**/*.test.tsx",
-    "src/__mocks__/fileMock.js"
+    "src/tests/__mocks__/fileMock.js"
   ],
   "exclude": ["node_modules"]
 }
